Spacing fixes

--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,16 @@ body {
   margin: 0 auto;
   height: 100%;
 }
+/* 
+.similar-hobbies .card {
+  padding-right: 10px;
+  padding-left: 10px;
+} */
+
+.similar-hobbies {
+  margin-top: 20px;
+  margin-bottom: 50px;
+}
 
 .card .card-img-container {
   height: 80%;
